<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WelcomeActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_acc_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:background="@drawable/btn_design"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_design"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/create_acc_btn"
        app:layout_constraintStart_toStartOf="@+id/create_acc_btn"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/guest_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_design"
        android:text="@string/continue_as_guest"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:layout_margin="35dp"
        android:visibility="gone"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintEnd_toEndOf="@+id/sign_btn"
        app:layout_constraintStart_toStartOf="@+id/sign_btn"
        app:layout_constraintTop_toBottomOf="@+id/sign_btn" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toTopOf="@+id/create_acc_btn"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        app:layout_constraintWidth_percent="0.3"
        android:src="@drawable/app_logo_round_icon"/>


</androidx.constraintlayout.widget.ConstraintLayout>