<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddImageProfileActivity">

    <TextView
        android:id="@+id/add_picTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_your_picture"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/Iv_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/next_Im_btn"
        app:layout_constraintTop_toBottomOf="@+id/add_picTv"
        app:strokeColor="@color/orange"
        app:strokeWidth="1dp"
        tools:layout_editor_absoluteX="20dp">

        <ImageView
            android:id="@+id/add_Im"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"

            />

        <ImageView
            android:id="@+id/icon_Im"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_add_image"
            />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_Im_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/filled_button_background"
        android:backgroundTint="@color/orange"
        android:padding="16dp"
        android:text="@string/next"
        android:layout_marginBottom="30dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/skip_Tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/skip_Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/skip"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>