<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".PartneredRestaurant.Activities.RestaurantInfoActivity">

    <ImageView
        android:id="@+id/backIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_arrow_icon"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/infoInputNextBtn"
        app:layout_constraintTop_toBottomOf="@id/backIv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/amlarai_bold"
                android:text="@string/fill_restaurant_info"
                android:textColor="@color/orange"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:hint="@string/restaurant_name"
                android:textColorHint="@color/orange"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/almarai_regular"
                    android:inputType="text"
                    android:textColor="@color/light_black" />

            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationTil"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:hint="@string/address"
                android:textColorHint="@color/orange"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/locationEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:fontFamily="@font/almarai_regular"
                    android:inputType="text"
                    android:textColor="@color/light_black" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTil"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:hint="@string/description"
                android:textColorHint="@color/orange"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationTil">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/almarai_regular"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:textColor="@color/light_black" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/amlarai_bold"
                android:text="@string/category"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/descriptionTil"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTil" />


            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/image_input_card_design"
                android:dropDownWidth="match_parent"
                android:padding="10dp"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/amlarai_bold"
                android:text="@string/service_options"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/descriptionTil"
                app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />


            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clipToPadding="false"
                android:fillViewport="true"
                android:layoutDirection="rtl"
                android:overScrollMode="never"
                android:paddingHorizontal="25dp"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/textView9">

                <LinearLayout
                    android:id="@+id/serviceOptionsLl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/amlarai_bold"
                android:text="@string/additional_services"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/descriptionTil"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/additionalServicesRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/amlarai_bold"
                android:text="@string/contact_information"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/descriptionTil"
                app:layout_constraintTop_toBottomOf="@+id/additionalServicesRv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/contactInfoRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />


            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/amlarai_bold"
                android:text="@string/social_media"
                android:textColor="@color/orange"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/descriptionTil"
                app:layout_constraintTop_toBottomOf="@+id/contactInfoRv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/socialMediaRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/infoInputNextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:elevation="3dp"
        android:fontFamily="@font/amlarai_bold"
        android:background="@color/orange"
        android:paddingVertical="10dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>